--- a/portfolio/app/components/hero/hero.css
+++ b/portfolio/app/components/hero/hero.css
@@ -1,48 +1,4 @@
-@import "tailwindcss";
-
-.hero-section-container {
-  display: flex;
-  min-height: 100vh;
-  width: 100%;
-  background-color: #f5f5f7;
-}
-
-.left-sided-hero,
-.right-sided-hero {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: start;
-  padding-top: 25vh;
-}
-
-.left-sided-hero{
-    flex: 55;
-}
-
-.right-sided-hero{
-    flex: 45;
-}
-
-.left-sided-padding {
-    padding-left: 20vh;
-}
-
-.lottie-trim-container {
-  width: 650px; 
-  height: 230px;
-  overflow: hidden; 
-}
-
-#lottie-player-element {
-  position: relative; 
-  top: -750px;
-  left: -605px;
-}
-
 .main-greeting {
-  font-weight: 500;
-  font-size: 80px;
   color: #a1a5ac;
   background-image: linear-gradient(60deg, #a2a6ad, #7a7c84, #45484c);
   background-clip: text;
@@ -60,25 +16,6 @@
   -webkit-text-fill-color: transparent;
 }
 
-.secondary-greeting {
-  font-weight: 400;
-  font-size: 30px;
-  color: #a1a5ac;
-  background-image: linear-gradient(60deg, #a2a6ad, #7a7c84, #45484c);
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: transparent;
-  -webkit-text-fill-color: transparent;
-}
-
-.contact-list {
-  display: flex;
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  gap: clamp(1rem, 3vw, 4rem);
-}
-
 .list-el {
   font-weight: 400;
   font-size: 24px;
@@ -91,9 +28,7 @@
   color: #22929e;
   text-decoration: none;
 
-  text-shadow: 
-    /* 0 0 10px #ffcc00, */
-    /* 0 0 20px #ffcc00,  */
+  text-shadow:
     0 0 30px #22929e, 
     0 0 40px #26a0ae,
     0 0 70px #2dbecf;
@@ -104,9 +39,7 @@
   color: #efc94a;
   text-decoration: none;
 
-  text-shadow: 
-    /* 0 0 10px #ffcc00, */
-    /* 0 0 20px #ffcc00,  */
+  text-shadow:
     0 0 30px #efc94a, 
     0 0 40px #f4d674,
     0 0 70px #efc94a;
@@ -118,7 +51,6 @@
   text-decoration: none;
 
   text-shadow: 
-    /* 0 0 10px #ffcc00, */
     0 0 20px #f45f47, 
     0 0 30px #f45f47, 
     0 0 40px #f07663,
@@ -130,59 +62,35 @@
   color: #636ec0;
   text-decoration: none;
 
-  text-shadow: 
-    /* 0 0 10px #ffcc00, */
-    /* 0 0 20px #ffcc00,  */
+  text-shadow:
     0 0 30px #636ec0, 
     0 0 40px #7c83bc,
     0 0 70px #636ec0;
 }
 
-@media (max-width: 768px) {
-    .hero-container {
-        flex-direction: column;
-    }
-    .hero-container {
-        min-height: auto;
-    }
-    .left-sided-padding{
-        padding-left: 5vh;
-    }
-}
-
-.icon-section-container {
-  border-radius: 20px; 
-  overflow: hidden; 
-  max-width: 200px;
-  height: auto;
-  margin: 20px auto;
-}
-
 .image-1 {
   position: relative;
-  top: -510px;
-  left: -100px;
+  top: -500px;
+  left: 30px;
   transform: rotate(-5deg);
   transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 }
 
 .image-1:hover {
   transform: rotate(0deg) translateY(-15px);
-  /* box-shadow: 0 30px 60px rgba(0, 0, 0, 0.6), 0 0 20px rgba(0, 150, 255, 0.7); */
   z-index: 10;
 }
 
 .image-2 {
   position: relative;
-  top: -350px;
-  left: 700px;
+  top: -175px;
+  left: 400px;
   transform: rotate(-7deg);
   transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 }
 
 .image-2:hover {
   transform: rotate(0deg) translateY(-15px);
-  /* box-shadow: 0 30px 60px rgba(0, 0, 0, 0.6), 0 0 20px rgba(0, 150, 255, 0.7); */
   z-index: 10;
 }
 
@@ -204,4 +112,12 @@
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
+}
+
+.message-bubble {
+  position: relative;
+  top: -480px;
+  left: 520px;
+  transform: rotate(20deg);
+  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 }
